[gd_scene load_steps=10 format=3 uid="uid://d0x4vdsnduxry"]

[ext_resource type="Script" uid="uid://ggwtsxddipx7" path="res://scripts/purple_slime.gd" id="1_p4tba"]
[ext_resource type="Texture2D" uid="uid://dmv8xp4wkkvqb" path="res://assets/sprites/slime_purple.png" id="1_rwesy"]
[ext_resource type="PackedScene" uid="uid://demwyl26cabi5" path="res://scenes/killzone.tscn" id="2_p4tba"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o0hry"]
atlas = ExtResource("1_rwesy")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_818gd"]
atlas = ExtResource("1_rwesy")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p467k"]
atlas = ExtResource("1_rwesy")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vw4l"]
atlas = ExtResource("1_rwesy")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_kw5n6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0hry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_818gd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p467k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vw4l")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4btqv"]
radius = 7.0

[node name="purple_slime" type="Node2D"]
script = ExtResource("1_p4tba")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kw5n6")
autoplay = "default"
frame_progress = 0.546217

[node name="Killzone" parent="." instance=ExtResource("2_p4tba")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_4btqv")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(10, 0)
target_position = Vector2(0, 21)

[node name="RayCastLeftHorizontal" type="RayCast2D" parent="."]
position = Vector2(-1.90735e-06, 0)
rotation = 1.57059
target_position = Vector2(-0.00204758, 10)

[node name="RayCastRightHorizontal" type="RayCast2D" parent="."]
rotation = -1.57104
target_position = Vector2(-0.00247522, 10)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-10, 0)
target_position = Vector2(0, 21)
